--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <button onclick="nextStep('no')">아니오</button>
     </div>
 
-    {   question: "",
+    <!-- {   question: "",
         yes: { },
         no: {  }
-    },
+    }, -->
 
     <script>
     const decisionTreeTest = {
