--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
       padding: 40px;
       border-radius: 16px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      /*display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;   화면 높이에 맞게 카드가 중앙에 위치하도록 */
     }
   
     #question {
@@ -155,6 +160,9 @@
             <option value="gju">군장대학교</option>
             <option value="dgu">대경대학교</option>
             <option value="hwu">호원대학교</option>
+            <option value="dstu">동원과학기술대학교</option>DSTU
+            <option value="gmu">계명대학교</option>
+            <option value="ctu">조선이공대학교</option>
           </select>
         </div>
       </div>
@@ -615,8 +623,430 @@
       no: { result: "어학당 입학 불가능" }
     },
     no: { result: "어학당 입학 불가능" }
-  }
+  };
 
+  const decisionTreeDSTU = {
+    question: "고등학교 졸업(예정)자인가?",
+    yes: {
+      question: "본인 및 부모가 모두 외국인인가?",
+      yes: {
+        question: "TOPIK 3급이 있는가?",
+        yes: {
+          question: "KRW 1,600만원 이상 예치된 잔고 증명서 제출이 가능한가?",
+          yes: {
+            question: "학부 입학을 희망하는가?",
+            options: [
+              {
+                option: "선박동력기계과",
+                next: {
+                  question: "등록금을 납부할 수 있는가?",
+                  table: {
+                    headers: ["TOPIK 급수", "납부 금액"],
+                    rows: [
+                      ["3급(30%)", "2,195,200원 + 전형료 20,000원" ],
+                      ["4급(40%)", "1,881,600원 + 전형료 20,000원"],
+                      ["5급, 6급 이상(50%)", "1,568,000원 + 전형료 20,000원"]
+                    ]
+                  },
+                  yes: {
+                    question: "기숙사를 희망하는가?",
+                    yes: {
+                      result: {
+                        message: "학부 입학 및 기숙사 사용 가능",
+                        table: [
+                              ["1인실", "900,000원(학기중) / 500,000원(방학중)"]
+                            ]
+                      }
+                    },
+                    no: { result: "학부 입학 가능" }
+                  },
+                  no: {
+                    question: "중국 기업의 대출을 받을 예정인가?",
+                    yes: {
+                      question: "기숙사를 희망하는가?",
+                      yes: {
+                        result: {
+                          message: "학부 입학 및 기숙사 사용 가능",
+                          table: [
+                              ["1인실", "900,000원(학기중) / 500,000원(방학중)"]
+                            ]
+                        }
+                      },
+                      no: { result: "학부 입학 가능" }
+                    },
+                    no: { result: "학부 입학 불가능" }
+                  }
+                }
+              },
+              {
+                option: "냉동공조설비과",
+                next: {
+                  question: "등록금을 납부할 수 있는가?",
+                  table: {
+                    headers: ["TOPIK 급수", "납부 금액"],
+                    rows: [
+                      ["3급(30%)", "2,195,200원 + 전형료 20,000원" ],
+                      ["4급(40%)", "1,881,600원 + 전형료 20,000원"],
+                      ["5급, 6급 이상(50%)", "1,568,000원 + 전형료 20,000원"]
+                    ]
+                  },
+                  yes: {
+                    question: "기숙사를 희망하는가?",
+                    yes: {
+                      result: {
+                        message: "학부 입학 및 기숙사 사용 가능",
+                        table: [
+                              ["1인실", "900,000원(학기중) / 500,000원(방학중)"]
+                            ]
+                      }
+                    },
+                    no: { result: "학부 입학 가능" }
+                  },
+                  no: {
+                    question: "중국 기업의 대출을 받을 예정인가?",
+                    yes: {
+                      question: "기숙사를 희망하는가?",
+                      yes: {
+                        result: {
+                          message: "학부 입학 및 기숙사 사용 가능",
+                          table: [
+                              ["1인실", "900,000원(학기중) / 500,000원(방학중)"]
+                            ]
+                        }
+                      },
+                      no: { result: "학부 입학 가능" }
+                    },
+                    no: { result: "학부 입학 불가능" }
+                  }
+                }
+              },
+              {
+                option: "아니오",
+                next: {
+                  result: "학부 입학 불가능"
+                }
+              }
+            ]
+          }
+        },
+        no: {
+          question: "어학프로그램(어학당)에 입학하고 싶은가?",
+          yes: {
+            question: "USD $10,000 이상 예치된 잔고증명서 제출이 가능한가?",
+            yes: {
+              question: "등록금 및 지원료 납부 가능한가? \n(등록금 45,000,000(4힉기) + 지원료 50,000 + 입학금 300,000원 )",
+              yes: {
+                question: "기숙사를 희망하는가?",
+                yes: {
+                  result: {
+                    message: "어학당 입학 및 입학 및 기숙사 사용 가능(어학당 3급 수료 후 학부 입학 가능)",
+                    table: [
+                              ["4인실", "1,300,000원(1년)"]
+                            ]
+                  }
+                },
+                no: { result: "어학당 입학 가능" }
+              },
+              no: { result: "어학당 입학 불가능" }
+            },
+            no: { result: "어학당 입학 불가능" }
+          },
+          no: { result: "어학당 입학 불가능" }
+        }
+      },
+      no: { result: "어학당 입학 불가능" }
+    },
+    no: { result: "어학당 입학 불가능" }
+  };
+  
+  const decisionTreeGMU = {
+    question: "고등학교 졸업(예정)자인가?",
+    yes: {
+      question: "본인 및 부모가 모두 외국인인가?",
+      yes: {
+        question: "TOPIK 3급이 있는가?",
+        yes: {
+          question: "KRW 1,600만원 이상 예치된 잔고 증명서 제출이 가능한가?",
+          yes: {
+            question: "학부 입학을 희망하는가?",
+            options: [
+              {
+                option: "전기공학과",
+                next: {
+                  question: "등록금을 납부할 수 있는가?",
+                  table: {
+                    headers: ["TOPIK 급수", "납부 금액"],
+                    rows: [
+                      ["3급(50%)", "2,335,000원 + 전형료 75,000원" ],
+                      ["4급(70%)", "1,401,000원 + 전형료 75,000원"],
+                      ["5급 이상(100%)", "입학등록금 무료 + 전형료 75,000원"]
+                    ]
+                  },
+                  yes: {
+                    question: "기숙사를 희망하는가?",
+                    yes: {
+                      result: {
+                        message: "학부 입학 및 기숙사 사용 가능",
+                        table: [
+                              ["일반동(2인실)", "641,000원(학기당)"],
+                              ["봉사동(남, 2인실)", "1,248,000원(학기당)"],
+                              ["협력동(여, 2인실)", "1,248,000원(학기당)"],
+                              ["신축동(남,여)", "1,335,000원(학기당)"]
+                            ]
+                      }
+                    },
+                    no: { result: "학부 입학 가능" }
+                  },
+                  no: {
+                    question: "중국 기업의 대출을 받을 예정인가?",
+                    yes: {
+                      question: "기숙사를 희망하는가?",
+                      yes: {
+                        result: {
+                          message: "학부 입학 및 기숙사 사용 가능",
+                          table: [
+                              ["일반동(2인실)", "641,000원(학기당)"],
+                              ["봉사동(남, 2인실)", "1,248,000원(학기당)"],
+                              ["협력동(여, 2인실)", "1,248,000원(학기당)"],
+                              ["신축동(남,여)", "1,335,000원(학기당)"]
+                            ]
+                        }
+                      },
+                      no: { result: "학부 입학 가능" }
+                    },
+                    no: { result: "학부 입학 불가능" }
+                  }
+                }
+              },
+              {
+                option: "기계공학과",
+                next: {
+                  question: "등록금을 납부할 수 있는가?",
+                  table: {
+                    headers: ["TOPIK 급수", "납부 금액"],
+                    rows: [
+                      ["3급(50%)", "2,335,000원 + 전형료 75,000원" ],
+                      ["4급(70%)", "1,401,000원 + 전형료 75,000원"],
+                      ["5급 이상(100%)", "입학등록금 무료 + 전형료 75,000원"]
+                    ]
+                  },
+                  yes: {
+                    question: "기숙사를 희망하는가?",
+                    yes: {
+                      result: {
+                        message: "학부 입학 및 기숙사 사용 가능",
+                        table: [
+                              ["일반동(2인실)", "641,000원(학기당)"],
+                              ["봉사동(남, 2인실)", "1,248,000원(학기당)"],
+                              ["협력동(여, 2인실)", "1,248,000원(학기당)"],
+                              ["신축동(남,여)", "1,335,000원(학기당)"]
+                            ]
+                      }
+                    },
+                    no: { result: "학부 입학 가능" }
+                  },
+                  no: {
+                    question: "중국 기업의 대출을 받을 예정인가?",
+                    yes: {
+                      question: "기숙사를 희망하는가?",
+                      yes: {
+                        result: {
+                          message: "학부 입학 및 기숙사 사용 가능",
+                          table: [
+                              ["일반동(2인실)", "641,000원(학기당)"],
+                              ["봉사동(남, 2인실)", "1,248,000원(학기당)"],
+                              ["협력동(여, 2인실)", "1,248,000원(학기당)"],
+                              ["신축동(남,여)", "1,335,000원(학기당)"]
+                            ]
+                        }
+                      },
+                      no: { result: "학부 입학 가능" }
+                    },
+                    no: { result: "학부 입학 불가능" }
+                  }
+                }
+              },
+              {
+                option: "자동차공학과",
+                next: {
+                  question: "등록금을 납부할 수 있는가?",
+                  table: {
+                    headers: ["TOPIK 급수", "납부 금액"],
+                    rows: [
+                      ["3급(50%)", "2,335,000원 + 전형료 75,000원" ],
+                      ["4급(70%)", "1,401,000원 + 전형료 75,000원"],
+                      ["5급 이상(100%)", "입학등록금 무료 + 전형료 75,000원"]
+                    ]
+                  },
+                  yes: {
+                    question: "기숙사를 희망하는가?",
+                    yes: {
+                      result: {
+                        message: "학부 입학 및 기숙사 사용 가능",
+                        table: [
+                              ["일반동(2인실)", "641,000원(학기당)"],
+                              ["봉사동(남, 2인실)", "1,248,000원(학기당)"],
+                              ["협력동(여, 2인실)", "1,248,000원(학기당)"],
+                              ["신축동(남,여)", "1,335,000원(학기당)"]
+                            ]
+                      }
+                    },
+                    no: { result: "학부 입학 가능" }
+                  },
+                  no: {
+                    question: "중국 기업의 대출을 받을 예정인가?",
+                    yes: {
+                      question: "기숙사를 희망하는가?",
+                      yes: {
+                        result: {
+                          message: "학부 입학 및 기숙사 사용 가능",
+                          table: [
+                              ["일반동(2인실)", "641,000원(학기당)"],
+                              ["봉사동(남, 2인실)", "1,248,000원(학기당)"],
+                              ["협력동(여, 2인실)", "1,248,000원(학기당)"],
+                              ["신축동(남,여)", "1,335,000원(학기당)"]
+                            ]
+                        }
+                      },
+                      no: { result: "학부 입학 가능" }
+                    },
+                    no: { result: "학부 입학 불가능" }
+                  }
+                }
+              },
+              {
+                option: "아니오",
+                next: {
+                  result: "학부 입학 불가능"
+                }
+              }
+            ]
+          }
+        },
+        no: {
+          question: "어학프로그램(어학당)에 입학하고 싶은가?",
+          yes: {
+            question: "USD $8,000 이상 예치된 잔고증명서 제출이 가능한가?",
+            yes: {
+              question: "등록금 및 지원료 납부 가능한가? \n(등록금 5,200,000(4학기) + 입학금 1,000,000원 )",
+              yes: {
+                question: "기숙사를 희망하는가?",
+                yes: {
+                  result: {
+                    message: "어학당 입학 및 입학 및 기숙사 사용 가능(어학당 3급 수료 후 학부 입학 가능)",
+                    table: [
+                              ["일반동(2인실)", "641,000원(학기당)"],
+                              ["봉사동(남, 2인실)", "1,248,000원(학기당)"],
+                              ["협력동(여, 2인실)", "1,248,000원(학기당)"],
+                              ["신축동(남,여)", "1,335,000원(학기당)"]
+                            ]
+                  }
+                },
+                no: { result: "어학당 입학 가능" }
+              },
+              no: { result: "어학당 입학 불가능" }
+            },
+            no: { result: "어학당 입학 불가능" }
+          },
+          no: { result: "어학당 입학 불가능" }
+        }
+      },
+      no: { result: "어학당 입학 불가능" }
+    },
+    no: { result: "어학당 입학 불가능" }
+  };
+  
+  const decisionTreeCTU = {
+    question: "고등학교 졸업(예정)자인가?",
+    yes: {
+      question: "본인 및 부모가 모두 외국인인가?",
+      yes: {
+        question: "TOPIK 3급이 있는가?",
+        yes: {
+          question: "KRW 1,600만원 이상 예치된 잔고 증명서 제출이 가능한가?",
+          yes: {
+            question: "학부 입학을 희망하는가?",
+            options: [
+              {
+                option: "글로벌기계융합전공",
+                next: {
+                  question: "등록금을 납부할 수 있는가?",
+                  table: {
+                    headers: ["TOPIK 급수", "납부 금액"],
+                    rows: [
+                      ["3급(50%)", "1,471,000원" ],
+                      ["4급 이상", "입학 등록금 무료"]                     
+                    ]
+                  },
+                  yes: {
+                    question: "기숙사를 희망하는가?",
+                    yes: {
+                      result: {
+                        message: "학부 입학 및 기숙사 사용 가능",
+                        table: [
+                              ["2인실", "1일 5,000원"]
+                            ]
+                      }
+                    },
+                    no: { result: "학부 입학 가능" }
+                  },
+                  no: {
+                    question: "중국 기업의 대출을 받을 예정인가?",
+                    yes: {
+                      question: "기숙사를 희망하는가?",
+                      yes: {
+                        result: {
+                          message: "학부 입학 및 기숙사 사용 가능",
+                          table: [
+                                ["2인실", "1일 5,000원"]
+                            ]
+                        }
+                      },
+                      no: { result: "학부 입학 가능" }
+                    },
+                    no: { result: "학부 입학 불가능" }
+                  }
+                }
+              },
+              {
+                option: "아니오",
+                next: {
+                  result: "학부 입학 불가능"
+                }
+              }
+            ]
+          }
+        },
+        no: {
+          question: "어학프로그램(어학당)에 입학하고 싶은가?",
+          yes: {
+            question: "USD $10,000 이상 예치된 잔고증명서 제출이 가능한가?",
+            yes: {
+              question: "등록금 및 지원료 납부 가능한가? \n(등록금 4,400,000(4학기) + 지원료 50,000)",
+              yes: {
+                question: "기숙사를 희망하는가?",
+                yes: {
+                  result: {
+                    message: "어학당 입학 및 입학 및 기숙사 사용 가능(어학당 3급 수료 후 학부 입학 가능)",
+                    table: [
+                              ["2인실", "80일 640,000원"]
+                            ]
+                  }
+                },
+                no: { result: "어학당 입학 가능" }
+              },
+              no: { result: "어학당 입학 불가능" }
+            },
+            no: { result: "어학당 입학 불가능" }
+          },
+          no: { result: "어학당 입학 불가능" }
+        }
+      },
+      no: { result: "어학당 입학 불가능" }
+    },
+    no: { result: "어학당 입학 불가능" }
+  };
+  
 
 
   let currentNode = {};
@@ -786,6 +1216,15 @@
       case "hwu":
         rootNode = decisionTreeHWU;
         break;
+      case "dstu":
+        rootNode = decisionTreeDSTU;
+        break;
+      case "gmu":
+        rootNode = decisionTreeGMU;
+        break;
+      case "ctu":
+        rootNode = decisionTreeCTU;
+        break;
       default:
         return;
     }
@@ -793,6 +1232,5 @@
     history = [];
     renderQuestion();
   }
-  
 </script>
 </html>
